[gd_scene load_steps=30 format=2]

[ext_resource path="res://Prototyping/Level2.gd" type="Script" id=1]
[ext_resource path="res://Objects/Cliff/Wall.tscn" type="PackedScene" id=2]
[ext_resource path="res://Objects/Decoration/AlgaeB.tscn" type="PackedScene" id=3]
[ext_resource path="res://Objects/Decoration/Algae.tscn" type="PackedScene" id=4]
[ext_resource path="res://Objects/Pickup/TreasureChest.tscn" type="PackedScene" id=5]
[ext_resource path="res://Actors/Roller.tscn" type="PackedScene" id=6]
[ext_resource path="res://Effects/DiveStartCutscene.tscn" type="PackedScene" id=7]
[ext_resource path="res://Objects/Decoration/Anemone.tscn" type="PackedScene" id=8]
[ext_resource path="res://Objects/Decoration/BubbleSpawner.tscn" type="PackedScene" id=9]
[ext_resource path="res://Objects/Pickup/TreasureGears.tscn" type="PackedScene" id=10]
[ext_resource path="res://Actors/Drill.tscn" type="PackedScene" id=11]
[ext_resource path="res://Logic/TopdownCamera.tscn" type="PackedScene" id=12]
[ext_resource path="res://Objects/Pickup/EnergyCrystal.tscn" type="PackedScene" id=13]
[ext_resource path="res://Objects/Cable/Cable.tscn" type="PackedScene" id=14]
[ext_resource path="res://Objects/Pickup/TreasureGold.tscn" type="PackedScene" id=15]
[ext_resource path="res://Logic/MouseDetectionLayer.tscn" type="PackedScene" id=16]
[ext_resource path="res://Prototyping/Collectibles.gd" type="Script" id=17]
[ext_resource path="res://LevelEditing.tres" type="Environment" id=18]
[ext_resource path="res://Assets/Models/Level2Base.tscn" type="PackedScene" id=19]
[ext_resource path="res://Objects/Cliff/Cliff2.tscn" type="PackedScene" id=20]
[ext_resource path="res://Objects/Cliff/Cliff1.tscn" type="PackedScene" id=21]
[ext_resource path="res://Objects/Cliff/Cliff3.tscn" type="PackedScene" id=22]
[ext_resource path="res://Objects/Cliff/Cliff5_large.tscn" type="PackedScene" id=23]
[ext_resource path="res://Objects/Cliff/Cliff4.tscn" type="PackedScene" id=24]
[ext_resource path="res://Actors/FishPath.tscn" type="PackedScene" id=25]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 99.1882, 0.0222201, 107.505 )

[sub_resource type="Curve3D" id=2]
_data = {
"points": PoolVector3Array( 0, 0, 0, 0, 0, 0, 24.8549, 0, -23.7631, 0, 0, 0, 0, 0, 0, 28.3686, 0, -30.4711, 0, 0, 0, 0, 0, 0, 35.396, 0, -36.7958, 0, 0, 0, 0, 0, 0, 48.3009, 0, -37.0513, 0, 0, 0, 0, 0, 0, 56.6699, 0, -30.7266, 0, 0, 0, 0, 0, 0, 54.7534, 0, -16.4801, 0, 0, 0, 0, 0, 0, 45.2344, 0, -7.91947, 0, 0, 0, 0, 0, 0, 28.688, 0, -9.96381, 0, 0, 0, 0, 0, 0, 24.0883, 0, -19.5466 ),
"tilts": PoolRealArray( 0, 0, 0, 0, 0, 0, 0, 0, 0 )
}

[sub_resource type="Curve3D" id=3]
_data = {
"points": PoolVector3Array( 0, 0, 0, 0, 0, 0, 41.4013, 0, -38.2651, 0, 0, 0, 0, 0, 0, 55.5839, 0, -33.0265, 0, 0, 0, 0, 0, 0, 56.4144, 0, -23.1881, 0, 0, 0, 0, 0, 0, 54.1784, 0, -15.2024, 0, 0, 0, 0, 0, 0, 40.3791, 0, -7.91947, 0, 0, 0, 0, 0, 0, 27.8575, 0, -10.6666, 0, 0, 0, 0, 0, 0, 24.8549, 0, -21.6549, 0, 0, 0, 0, 0, 0, 33.9267, 0, -35.1986 ),
"tilts": PoolRealArray( 0, 0, 0, 0, 0, 0, 0, 0 )
}

[sub_resource type="Curve3D" id=4]
_data = {
"points": PoolVector3Array( 0, 0, 0, 0, 0, 0, 50.9841, 0, -14.4997, 0, 0, 0, 0, 0, 0, 40.3152, 0, -8.55833, 0, 0, 0, 0, 0, 0, 30.4129, 0, -10.5388, 0, 0, 0, 0, 0, 0, 25.366, 0, -18.3328, 0, 0, 0, 0, 0, 0, 29.0713, 0, -29.4489, 0, 0, 0, 0, 0, 0, 35.7793, 0, -34.8153, 0, 0, 0, 0, 0, 0, 40.8902, 0, -36.7958, 0, 0, 0, 0, 0, 0, 53.4757, 0, -33.2821, 0, 0, 0, 0, 0, 0, 55.4561, 0, -22.6132, 0, 0, 0, 0, 0, 0, 53.9229, 0, -17.7579 ),
"tilts": PoolRealArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 )
}

[node name="Level2" type="Spatial"]
script = ExtResource( 1 )

[node name="Cable" parent="." instance=ExtResource( 14 )]

[node name="Player1" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.42383, -9.53674e-07, 40.5777 )

[node name="Player2" parent="." instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.42383, -9.53674e-07, 40.5777 )

[node name="Objects" type="Spatial" parent="."]

[node name="Algae" parent="Objects" instance=ExtResource( 4 )]
transform = Transform( 0.993471, 0, 0.114088, 0, 1, 0, -0.114088, 0, 0.993471, -18.1523, 1.90735e-06, 38.2327 )

[node name="Algae2" parent="Objects" instance=ExtResource( 4 )]
transform = Transform( -0.771525, 0, 0.636199, 0, 1, 0, -0.636199, 0, -0.771525, 36.9545, 1.90735e-06, -16.5311 )

[node name="Algae3" parent="Objects" instance=ExtResource( 4 )]
transform = Transform( -0.771525, 0, 0.636199, 0, 1, 0, -0.636199, 0, -0.771525, 45.2898, 1.90735e-06, -5.59276 )

[node name="Algae4" parent="Objects" instance=ExtResource( 4 )]
transform = Transform( -0.771525, 0, 0.636199, 0, 1, 0, -0.636199, 0, -0.771525, 56.4353, 1.90735e-06, -33.6119 )

[node name="Algae5" parent="Objects" instance=ExtResource( 4 )]
transform = Transform( -0.540579, 0, 0.841294, 0, 1, 0, -0.841294, 0, -0.540579, 37.3222, 5.72205e-06, -38.6984 )

[node name="Algae7" parent="Objects" instance=ExtResource( 4 )]
transform = Transform( -0.540579, 0, 0.841294, 0, 1, 0, -0.841294, 0, -0.540579, 22.0956, 5.72205e-06, -9.39809 )

[node name="Algae6" parent="Objects" instance=ExtResource( 4 )]
transform = Transform( -0.994665, 0, -0.103157, 0, 1, 0, 0.103157, 0, -0.994665, 24.9134, 5.72205e-06, -32.083 )

[node name="EnergyCrystal" parent="Objects" instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -16.7037, -2.86102e-06, -14.1597 )

[node name="BubbleSpawner" parent="Objects" instance=ExtResource( 9 )]
transform = Transform( 0.2366, 0, 0, 0, 0.2366, 0, 0, 0, 0.2366, 4.81804, 0, -9.14525 )

[node name="Wall" parent="Objects" instance=ExtResource( 2 )]
transform = Transform( 1.31956, 0, -0.643821, 0, 1.46825, 0, 0.643821, 0, 1.31956, 30.729, 0, -22.6567 )

[node name="AlgaeB" parent="Objects" instance=ExtResource( 3 )]
transform = Transform( 0.74936, 0, 0.662162, 0, 1, 0, -0.662162, 0, 0.74936, -11.3811, 0, 33.7188 )

[node name="AlgaeB2" parent="Objects" instance=ExtResource( 3 )]
transform = Transform( 0.74936, 0, 0.662162, 0, 1, 0, -0.662162, 0, 0.74936, 44.8325, 0, -25.6176 )

[node name="AlgaeB3" parent="Objects" instance=ExtResource( 3 )]
transform = Transform( 0.74936, 0, 0.662162, 0, 1, 0, -0.662162, 0, 0.74936, 43.1985, 0, -19.7966 )

[node name="Anemone" parent="Objects" instance=ExtResource( 8 )]
transform = Transform( 0.701817, 0, -0.712357, 0, 1, 0, 0.712357, 0, 0.701817, 3.00288, 1.90735e-06, 30.0866 )

[node name="Anemone2" parent="Objects" instance=ExtResource( 8 )]
transform = Transform( 0.701817, 0, -0.712357, 0, 1, 0, 0.712357, 0, 0.701817, 39.9, 1.90735e-06, -19.6425 )

[node name="Anemone3" parent="Objects" instance=ExtResource( 8 )]
transform = Transform( -0.363625, 0, -0.931545, 0, 1, 0, 0.931545, 0, -0.363625, 44.4966, 1.90735e-06, -22.3377 )

[node name="Anemone4" parent="Objects" instance=ExtResource( 8 )]
transform = Transform( -0.965872, 0, -0.259021, 0, 1, 0, 0.259021, 0, -0.965872, 41.8664, 1.90735e-06, -27.1492 )

[node name="Pivot" type="Spatial" parent="."]
__meta__ = {
"_editor_description_": "Tracks the controlled player on the ground"
}

[node name="TopdownCamera" parent="Pivot" instance=ExtResource( 12 )]
transform = Transform( 1, 0, 0, 0, 0.842903, 0.538065, 0, -0.538065, 0.842903, 0, 5.67633, 5.23851 )
current = true
far = 75.0
zoom_end = 12.0
zoom_min = 1.1

[node name="Collectibles" type="Node" parent="."]
script = ExtResource( 17 )

[node name="TreasureGold" parent="Collectibles" instance=ExtResource( 15 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 17.557, 0, 7.65944 )
version = 3

[node name="TreasureGears" parent="Collectibles" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -24.5388, -4.76837e-07, 0.21174 )

[node name="MouseDetectionLayer" parent="." instance=ExtResource( 16 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.99728, 1.10036, 0 )
visible = false

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 18 )

[node name="GroundCollision" type="StaticBody" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="GroundCollision"]
shape = SubResource( 1 )

[node name="DiveStartCutscene" parent="." instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.52425, 0, 40.7169 )

[node name="Point1" type="Camera" parent="DiveStartCutscene"]
transform = Transform( 0.419785, 0, -0.907624, 0, 1, 0, 0.907624, 0, 0.419785, 37.2973, 2.1543, -60.7893 )

[node name="Point2" type="Camera" parent="DiveStartCutscene"]
transform = Transform( -0.85512, 0, 0.51843, 0, 1, 0, -0.51843, 0, -0.85512, 29.7726, 8.49234, -47.0862 )

[node name="Point3" type="Camera" parent="DiveStartCutscene"]
transform = Transform( -0.918515, 0.0181013, 0.394971, 0, 0.998951, -0.0457813, -0.395385, -0.0420509, -0.917552, 11.9339, 8.22862, -27.4567 )

[node name="Level2Base" parent="." instance=ExtResource( 19 )]

[node name="TreasureChest" parent="." instance=ExtResource( 5 )]
transform = Transform( 0.150105, 0, -0.98867, 0, 1, 0, 0.98867, 0, 0.150105, 40.7274, -9.53674e-07, -23.1712 )

[node name="Cliffs" type="Spatial" parent="."]

[node name="Cliff1" parent="Cliffs" instance=ExtResource( 21 )]
transform = Transform( -0.398205, 0, 0.917297, 0, 1, 0, -0.917297, 0, -0.398205, -32.4783, 0.0223536, 3.91579 )

[node name="Cliff5" parent="Cliffs" instance=ExtResource( 23 )]
transform = Transform( -0.986415, 0, 0.164273, 0, 1, 0, -0.164273, 0, -0.986415, 50.5938, 0.0222383, -29.0012 )

[node name="Cliff3" parent="Cliffs" instance=ExtResource( 22 )]
transform = Transform( -0.342955, 0, -0.939352, 0, 1, 0, 0.939352, 0, -0.342955, 35.4493, 0.0222397, -28.5075 )

[node name="Cliff2" parent="Cliffs" instance=ExtResource( 20 )]
transform = Transform( 0.781063, 0, 0.624452, 0, 1, 0, -0.624452, 0, 0.781063, 43.8347, 0.536293, -14.8172 )

[node name="Cliff4" parent="Cliffs" instance=ExtResource( 24 )]
transform = Transform( -0.967643, 0, 0.252323, 0, 1, 0, -0.252323, 0, -0.967643, 38.5741, -1.34525, -10.7255 )

[node name="Enemies" type="Spatial" parent="."]

[node name="FishPath" parent="Enemies" instance=ExtResource( 25 )]
curve = SubResource( 2 )

[node name="FishPath2" parent="Enemies" instance=ExtResource( 25 )]
curve = SubResource( 3 )

[node name="FishPath3" parent="Enemies" instance=ExtResource( 25 )]
curve = SubResource( 4 )
